feat: allow enabling/disabling subset of MCP tools
